force-app/main/default/objects/Account/fields/CS_Rating__c.field-meta.xml
<CustomField>
    <fullName>CS_Rating__c</fullName>
    <label>CS Rating</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>