force-app/main/default/objects/Account/fields/CSR__c.field-meta.xml
<CustomField>
    <fullName>CSR__c</fullName>
    <label>CSR</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>