force-app/main/default/objects/Account/fields/Customer_Satisfaction_Rating__c.field-meta.xml
<CustomField>
    <fullName>Customer_Satisfaction_Rating__c</fullName>
    <description>Customer Satisfaction Rating of cases of the customer</description>
    <label>Customer Satisfaction Rating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>